--- a/ContactAnalysis/test.ipynb
+++ b/ContactAnalysis/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,8 +21,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#u = mda.Universe('/Users/dburns/Library/CloudStorage/Box-Box/1_GROUP_data/Enzymes/atcase/from_pronto/1q95/1q95_minimized_nohoh.pdb')\n",
-    "u = mda.Universe('../../../from_box/atcase/1q95_minimized_nohoh.pdb')\n",
+    "u = mda.Universe('/Users/dburns/Library/CloudStorage/Box-Box/1_GROUP_data/Enzymes/atcase/from_pronto/1q95/1q95_minimized_nohoh.pdb')\n",
+    "#u = mda.Universe('../../../from_box/atcase/1q95_minimized_nohoh.pdb')\n",
     "protein = u.select_atoms('protein')\n",
     "u = mda.Merge(protein)\n",
     "universe = u.copy()\n",
@@ -35,8 +35,8 @@
     "# work with it as a df\n",
     "identical_table = pd.DataFrame(array, columns=segids, index=segids)\n",
     "\n",
-    "#contact_dir = '/Users/dburns/Library/CloudStorage/Box-Box/1_GROUP_data/Enzymes/atcase/from_nova/contacts/freqs'\n",
-    "contact_dir = '../../../from_box/atcase/freqs'\n",
+    "contact_dir = '/Users/dburns/Library/CloudStorage/Box-Box/1_GROUP_data/Enzymes/atcase/from_nova/contacts/freqs'\n",
+    "#contact_dir = '../../../from_box/atcase/freqs'\n",
     "contact_files = [f'{contact_dir}/{file}' for file in os.listdir(contact_dir)]\n",
     "contact_files.sort()\n",
     "cont = make_contact_frequency_dictionary(contact_files)\n",
@@ -473,7 +473,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Averageing Loop"
+    "# Averaging Loop"
    ]
   },
   {
@@ -583,7 +583,8 @@
     "          to_drop = []\n",
     "          resnums = []\n",
     "          matched_name = None\n",
-    "          flipped = None\n",
+    "          #REMOVE\n",
+    "          #flipped = None\n",
     "          for contact_name in to_average:\n",
     "               contact_info = _parse_id(contact_name)\n",
     "               if (contact_info['chaina'],contact_info['chainb']) not in equivalent_interactions[representative_pair]:\n",
@@ -591,14 +592,19 @@
     "               else: \n",
     "                    # use this to identify the outlier that would give a flipped naming scheme\n",
     "                    resnums.append(contact_info['resida'])\n",
-    "                    if (contact_info['resida'], contact_info['residb']) == representative_pair:\n",
+    "                    \n",
+    "                    if (contact_info['chaina'], contact_info['chainb']) == representative_pair:\n",
     "                         matched_name = contact_name\n",
-    "                    elif (contact_info['residb'], contact_info['resida']) == representative_pair:\n",
-    "                         flipped = True\n",
+    "                    # this doesn't make sense, comparing resids to chainids REMOVE\n",
+    "                    #elif (contact_info['residb'], contact_info['resida']) == representative_pair:\n",
+    "                         #flipped = True\n",
+    "          # drop the ones that don't fit the original pair\n",
+    "          for contact_name in to_drop:\n",
+    "               to_average.remove(contact_name)\n",
     "          # if inter-hetero subunit     \n",
-    "          if get_chain_group(representative_chain[0], identical_subunits) != (get_chain_group(representative_chain[1], identical_subunits)):\n",
+    "          if get_chain_group(representative_pair[0], identical_subunits) != get_chain_group(representative_pair[1], identical_subunits):\n",
     "               # and the hetero unit order matches (This shouldn't be happening in the test case)\n",
-    "               if get_chain_group(representative_chain[0], identical_subunits) ==  get_chain_group(resids['chaina'], identical_subunits):\n",
+    "               if get_chain_group(representative_pair[0], identical_subunits) ==  get_chain_group(resids['chaina'], identical_subunits):\n",
     "                    averaged_name =  f\"{representative_pair[0]}:{resids['resna']}:{resids['resida']}-{representative_pair[1]}:{resids['resnb']}:{resids['residb']}\"\n",
     "               else:\n",
     "                    averaged_name =  f\"{representative_pair[0]}:{resids['resnb']}:{resids['residb']}-{representative_pair[1]}:{resids['resna']}:{resids['resida']}\"\n",
@@ -611,23 +617,38 @@
     "               elif flipped is not None:\n",
     "                    averaged_name = f\"{representative_pair[0]}:{resids['resnb']}:{resids['residb']}-{representative_pair[1]}:{resids['resna']}:{resids['resida']}\"\n",
     "               else:\n",
+    "                    #measure the distance between the contacting residues for each contact\n",
+    "                    # can probably move this to top of the parent else (3rd back)\n",
+    "                    contact_distances = []\n",
+    "                    for contact_name in to_average:\n",
+    "                         contact_info = _parse_id(contact_name)\n",
+    "                         sel1 = f\"chain {contact_info['chaina']} and resnum {contact_info['resida']} and name CA\"\n",
+    "                         sel2 = f\"chain {contact_info['chainb']} and resnum {contact_info['residb']} and name CA\"\n",
+    "                         contact_distances.append(get_pair_distance(sel1, sel2, u))\n",
+    "\n",
+    "                    mean_distance = np.mean(contact_distances)\n",
+    "\n",
+    "                    testa1 = f\"chain {representative_pair[0]} and resnum {contact_info['resida']} and name CA\"\n",
+    "                    testa2 = f\"chain {representative_pair[1]} and resnum {contact_info['residb']} and name CA\"\n",
+    "                    testb1 = f\"chain {representative_pair[1]} and resnum {contact_info['resida']} and name CA\"\n",
+    "                    testb2 = f\"chain {representative_pair[0]} and resnum {contact_info['residb']} and name CA\"\n",
+    "\n",
+    "                    testa = get_pair_distance(testa1, testa2, u)\n",
+    "                    testb = get_pair_distance(testb1, testb2, u)\n",
+    "\n",
+    "                    if np.abs(testa-mean_distance) < np.bas(testb-mean_distance):\n",
+    "                         averaged_name = \n",
+    "\n",
+    "                    # now get both distances for the representative pair with resids swapped \n",
+    "                    # and take the name that has the distance most closely matching the mean.\n",
     "                    #compare_distances between the resids (and possibly all the others to get avg dist) and then the representative_pair and flipped representative_pair\n",
     "\n",
     "\n",
     "\n",
-    "          # drop the ones that don't fit the original pair\n",
-    "          for contact_name in to_drop:\n",
-    "               to_average.remove(contact_name)\n",
+    "         \n",
     "\n",
     "         \n",
-    "          ##### Filter out ones that don't fit the equivalent_interaction of the resids[] data\n",
-    "          to_drop = []\n",
-    "          for contact_name in to_average:\n",
-    "               contact_info = _parse_id(contact_name)\n",
-    "               if (contact_info['chaina'],contact_info['chainb']) not in equivalent_interactions[representative_pair]:\n",
-    "                    to_drop.append(contact_name)\n",
-    "          for contact_name in to_drop:\n",
-    "               to_average.remove(contact_name)\n",
+    "         \n",
     "     ## TODO adjust average to account for number of subunits\n",
     "     #if chaina == chainb:\n",
     "     #    denominator = len(identical_subunits(get_chain_group(chain)))\n",
@@ -814,7 +835,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.18"
   },
   "orig_nbformat": 4
  },
